# fuzzy-expert-rs

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
src/: dsl.rs  inference.rs  inputs.rs  lib.rs  linspace.rs  math.rs  ops.rs  outputs.rs  rules.rs  terms.rs  variable.rs
