[package]
name = "fuzzy-expert"
version = "0.1.0"
authors = ["Daniel Kolsoi <thadan64@gmail.com>"]
description = "A fuzzy logic library with support for mamdani fuzzy inference."
edition = "2021"
readme = "README.md"
keywords = ["fuzzy", "logic", "mamdani"]
license = "Apache-2.0"

[dependencies]
fixed-map = "0.8"
itertools = "0.10"
num = "0.4"
slotmap = "1"
